--- a/a.css
+++ b/a.css
@@ -10,10 +10,11 @@
   box-sizing: border-box;
   font-family: 'Caprasimo', cursive;
   font-family: 'Russo One', sans-serif;
+  font-weight: 100;
 }
 
 body {
-  background: #1a1a1d
+  background: #ffffff;
 }
 
 nav {
@@ -76,7 +77,7 @@ a {
 
 .nav-item {
   position: relative;
-  top: 12px;
+  top: 1px;
   margin-left: 20px;
 }
 
@@ -96,6 +97,7 @@ a:hover i {
 .logout {
   position: absolute;
   bottom: 0;
+  
 }
 
 .container {
@@ -121,6 +123,10 @@ a:hover i {
   width: 100%;
 }
 
+.main-top h1{
+  padding-left: 15px;
+  color: #c8c7e7;
+}
 .main-top {
   display: flex;
   width: 100%;
@@ -177,7 +183,7 @@ a:hover i {
 
 .users td {
   font-size: 14px;
-  padding-right: 15px;
+  padding: 2px;
 }
 
 .users .card button {
@@ -213,6 +219,9 @@ a:hover i {
   box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
 }
 
+.team-list h1{
+  color: #c8c7e7;
+}
 .table {
   border-collapse: collapse;
   margin: 25px 0;
@@ -224,7 +233,7 @@ a:hover i {
 
 table thead tr {
   color: #928fdd;
-  background: #000000;
+  background: #020202;
   text-align: left;
   font-weight: bold;
 }
@@ -232,7 +241,7 @@ table thead tr {
 .table th,
 .table td {
 
-  color: #4e4e50;
+  color: #dda6a6;
   padding: 12px 15px;
 }
 
@@ -274,7 +283,7 @@ table thead tr {
 }
 
 .ana .analytics-card {
-  background-color: #4E4E50;
+  background-color: #c3073f;
   width: 30%;
   border-radius: 4px;
   box-shadow: 0 9px 9px rgba(255, 255, 255, 0.1);
@@ -290,7 +299,7 @@ table thead tr {
 
 .analytics-card .metric {
   font-size: 36px;
-  color: #C3073F;
+  color: #fff9fb;
   margin: 10px 0;
 }
 
